# efact-print-agent

./: Cargo.toml  README.md  config.toml  install.ps1  install.sh
.github/workflows/: release.yml
src/: config.rs  main.rs  printer.rs  system_printer.rs  tray.rs
