[package]
name = "efact-printer-agent"
version = "0.2.0"
edition = "2021"
description = "Local USB printer agent for efact ESC/POS printing"

[[bin]]
name = "efact-printer-agent"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hidapi = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
